Fix flicker on hover

--- a/source/assets/stylesheets/_index.scss
+++ b/source/assets/stylesheets/_index.scss
@@ -84,17 +84,18 @@
 
 .featured-project {
   position: relative;
-  width: 80%;
-  height: auto;
-  float: none;
+
   img {
     width: 100%;
+    padding-bottom: 20px;
   }
+
   @media only screen and (min-width:40.063em) {
     width: 33.3%;
     float: left;
-    img:hover {
-      opacity: 0.1;
+    img { padding: 0 }
+    &:hover img{
+        opacity: 0.1;
     }
   }
 }
